refactor: IDE 경고 수정 및 코드 품질 개선